# atmo-rust

./: .gitignore  Cargo.toml  README.md  ani-asthenosphere.mov  package.json
examples/: animated_gif_example.rs  asth_sim_linked_demo.rs  asthenosphere_gif.rs  export_to_json.rs  noise_generator_demo.rs  sim_next_runner.rs  sim_next_runner_nv.rs  test_multilayer.rs
examples/deprecated/: asth_sim_linked_demo.rs
examples/plate_generation/: .gitignore  .pnp.cjs  README.md  index.html  package.json
examples/plate_generation/public/: simulation_data.json
public/: index.html
scripts/: setup.sh
sim_next_example.db/: IDENTITY  LOG  LOG.old.1750376558037306  MANIFEST-000009
src/: App.css  App.js  asl_binary_pair_leveller.rs  asl_direct_transfer_leveller.rs  asl_leveller.rs  asth_cell_next.rs  asth_constants.rs  asth_mutate.rs  asth_process_cell.rs  asth_sim.rs  asth_sim_linked.rs  asthenosphere.rs  asthenosphere_linked.rs  batch_transfer.rs  binary_pair.rs  constants.rs  convection.rs  cool_asth_cell.rs  erode_cell.rs  geoconverter.rs  gif_exporter.rs  h30_utils.rs  h3_utils.rs  helpers.rs  level_cells.rs  lib.rs  perlin_noise_generator.rs  perlin_scaler.rs  planet.rs  plate.rs  plate_generator.rs  png_exporter.rs  rock_store.rs  sim.rs  sim_manager.rs  sim_next.rs  sim_next_test.rs  store.rs  thermal_plate_generator.rs  vary.rs  (+1 more)
src/components/: InfoPanel.js  PlateRenderer.js
src/deprecated/: asth_cell_update.rs  asth_cell_update_collection.rs  asth_sim.rs  mod.rs  png_exporter_deprecated.rs
src/steps/: cool_asth_cell.rs  mod.rs
(+7 files in other folders)
