[package]
name = "atmo-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"      # optional, just for readable dumps
glam = { version = "0.25", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.9.1"
num-traits = "0.2"
rocksdb = "0.23"
bincode = "1.3.3"
h3o = "0.8"
once_cell = "1.21.3"
tempfile = "3.20.0"
nalgebra = "0.33.2"