[package]
name = "atmo-rust"
version = "0.1.0"
edition = "2024"

[profile.test]
warnings = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"      # optional, just for readable dumps
glam = { version = "0.25", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.9.1"
num-traits = "0.2"
rocksdb = "0.23"
bincode = "1.3.3"
h3o = {  version = "0.8", features = ["serde"] }
once_cell = "1.21.3"
tempfile = "3.20.0"
nalgebra = "0.33.2"
noise = "0.9.0"
rayon = "1.10.0"
gif = "0.12"
image = "0.24"

[[example]]
name = "export_to_json"
path = "examples/export_to_json.rs"